refactor: Codigo para probar modulo databasse
