# src/main/java/com/santalucia/example/infraestructure/dao/mappers/AgenciaMapper.java
@@ -1,0 +1,31 @@
+package com.santalucia.example.infraestructure.dao.mappers;
+
+import java.util.List;
+
+import org.apache.ibatis.annotations.Mapper;
+import org.apache.ibatis.annotations.Select;
+
+import com.santalucia.example.api.model.Agencia;
+
+@Mapper
+public interface AgenciaMapper {
+
+	@Select("select g.dprov, h.dpoblaci, c.dagencia,"
+			+ "              case f.dtvia when null then ' ' else f.dtvia end as dtvia," + "              b.ddomici"
+			+ "      FROM domicagenc a, domicilios b, agencias c, centrasiis d,"
+			+ "                      outer tvia f, provincias g, nuclepobla h,"
+			+ "							outer medcomunic mc, medcomagen ma"
+			+ "      where a.ctdomici = 'PR' and b.nidendom = a.nidendom"
+			+ "            and c.centidad = a.centidad and c.cagencia = a.cagencia and c.ffivaldt = '9999-12-31'"
+			+ "            and d.cagencia = c.cagencia and d.cofagenc = 0"
+			+ "            and not exists (select * from cacetrafec e"
+			+ "                            where e.ccentrab = d.ccentrab and e.xcacetra = 'W'"
+			+ "                                  and e.ffivaldt = '9999-12-31')" + "            and f.ctvia = b.ctvia"
+			+ "            and g.cprov = b.cprov"
+			+ "            and h.cprov = b.cprov and h.clocali = b.clocali and h.centcol = 0 and h.centsin = 0"
+			+ "			 and ma.cagencia = c.cagencia"
+			+ "			 and mc.nidmecom = ma.nidmecom and mc.xtmedcom = 'C' and mc.norden > 0"
+			+ "      order by b.cprov, b.clocali, a.cagencia ASC;")
+	List<Agencia> getAgencias();
+
+}
